<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login_label_text">Login</string>
    <string name="password_input_hint">enter password</string>
    <string name="email_input_hint">enter email address</string>
    <string name="register_button_text">Register</string>
    <string name="login_button_text">Login</string>
    <string name="welcome_title_text">Welcome</string>
    <string name="welcome_text">It\'s nice to have you here.</string>
    <string name="instruction_button_text">Instructions</string>
    <string name="instruction_title_text">Instruction</string>
    <string name="instruction_text">todo add instruction text</string>
    <string name="shoeList_button_text">Shoe list</string>
    <string name="shoeList_title_text">Shoe list</string>
    <string name="fab_content_desc">Open detail view for shoe</string>
    <string name="shoe_detail_title_text">Shoe details</string>
    <string name="shoeNameLabel_text">Shoe name</string>
    <string name="shoeCompanyLabel_text">Company</string>
    <string name="shoeSizeLabel_text">Size</string>
    <string name="save_shoe_button_text">Save</string>
    <string name="quit_shoe_button__text">Quit</string>
    <string name="logout_menu_text">Logout</string>
    <string name="shoeDescriptionLabel_text">Shoe description</string>
    <string name="formattedShoeListItem_template">%1$s (%2$.1f, %3$s) - %4$s</string>
</resources>
